--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
         <title>Hello my world!!</title>
     </head>
     <body>
-        Hello World!
+        <h1></h1>Hello World!</h1>
+        <h2>Hello!</h2>
     </body>
 </html>
